--- a/piestyle4a.css
+++ b/piestyle4a.css
@@ -39,9 +39,10 @@
 	border: solid white 1px;
 	border-radius: 12%;
 	color: white;
-	font-family: "Michroma";
+	font-family: "Michroma", sans-serif;
 	font-size: 0.5em;
 	float: right;
+	cursor: pointer;
 }
 
 #status {
@@ -52,6 +53,15 @@
 	padding: 1%;
 	margin: 0 auto;
 	margin-bottom: 2%;
+	color: #FF904A;
+	text-align: center;
+	font-size: x-small;
+	font-family: "Michroma", sans-serif;
+}
+
+.statustext {
+	position: relative;
+	bottom: 25%;
 }
 
 #options {
@@ -59,39 +69,48 @@
 	border: solid #FFD653;
 	border-width: 1%;
 	max-width: 90%;
-	height: 50%;
+	height: 55%;
 	padding: 1%;
 	margin: 0 auto;
 	margin-bottom: 2%;
-
 }
 
-#pie {
+#pie {}
+#shell {}
+#filling {}
 
+#formshell {
+	margin: 0 auto;
+	text-align: center;
+	position: relative;
+	left: 85px;
 }
 
-#shell {
-
+#formfilling {
+	position: relative;
+	left: 10px;
 }
 
-#filling {
-
+#formbake {
+	margin-top: 15px;
+	position: relative;
+	left: 80px;
 }
 
-#formshell, #formfilling {
-
-}
 
 #oven {
 	background-color: #DEFFFA;
 	border: solid #FFD653;
 	border-width: 1%;
 	max-width: 90%;
-	height: 26%;
+	height: 20%;
 	padding: 1%;
 	margin: 0 auto;
 	margin-bottom: 2%;
+}
 
+#ovenopening {
+	max-width: 100%;
 }
 
 .selecttext {
@@ -118,11 +137,83 @@
 	color: #FF904A;
 	font-family: "Michroma", sans-serif;
 	font-size: xx-small;
-
 }
+
+/* clearfix */
 
 .group:after {
   	content:"";
  	display:table;
  	clear:both;
 }
+
+/* media queries */
+
+@media (max-width: 320px) {
+	#left_shell_panel, #right_fill_panel {
+		display: none;
+	}
+}
+/* need to rewrite these next two media queries */
+@media (min-width: 340px) and (max-width: 767px) {
+	
+
+	#left_shell_panel {
+		background-color: #A2e5e8;
+		border: solid #2AB2AB;
+		border-width: 0.5%;
+		min-width: 100%;
+		max-width: 100%;
+		height: 479px;
+		z-index: -10;
+		padding: 2% 0 2% 0;
+		border-radius: 1%;
+		position: absolute;
+	
+		
+	}
+
+
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+	
+
+	#left_shell_panel {
+		background-color: #A2e5e8;
+		border: solid #2AB2AB;
+		border-width: 0.5%;
+		min-width: 100%;
+		max-width: 100%;
+		height: 479px;
+		z-index: -10;
+		padding: 2% 0 2% 0;
+		border-radius: 1%;
+		position: absolute;
+	
+		
+	}
+}
+
+@media (min-width: 1024px) {
+	
+	#left_shell_panel {
+		background-color: #A2e5e8;
+		border: solid #2AB2AB;
+		border-width: 0.5%;
+		min-width: 100%;
+		max-width: 100%;
+		height: 479px;
+		z-index: -10;
+		padding: 2% 0 2% 0;
+		border-radius: 1%;
+		position: absolute;
+	
+		
+	}
+
+
+	
+
+
+} 
